# hm-python

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: hm_python.console.imports  test.test_console.imports  test.test_wikipedia.imports
.pytype/pyi/: noxfile.pyi
.pytype/pyi/hm_python/: wikipedia.pyi
.pytype/pyi/test/: conftest.pyi
docs/: conf.py  index.rst  reference.rst
src/hm_python/: __init__.py  console.py  wikipedia.py
test/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
